[package]
name = "hashdenticon"
version = "0.1.0"
edition = "2024"

description = "generate identicons from hashed seed strings"
authors = ["Patrick Armengol <patrickarmengol@protonmail.com>"]
readme = "README.md"
documentation = "https://github.com/patrickarmengol/hashdenticon"
homepage = "https://github.com/patrickarmengol/hashdenticon"
repository = "https://github.com/patrickarmengol/hashdenticon"
license = "MIT OR Apache 2.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
image = "0.25.6"
sha2 = "0.10.9"
